--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,7 @@
-@font-face {
-  font-family: 'gamegirl';
-  src: local('gamegirl'), url('resources/fonts/gamegirl/Gamegirl.ttf');
-}
-
 body {
   margin: 0;
   padding: 0;
-  font-family: gamegirl;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
